--- a/src/Styles/header.scss
+++ b/src/Styles/header.scss
@@ -60,4 +60,79 @@
             }
         }
     }
+
+    &__toggle-btn {
+        display: none;
+        background-color: transparent;
+    }
+
+    &__hidden {
+        position: fixed;
+        top: 120px;
+        left: 0;
+        bottom: 0;
+        z-index: 100;
+        width: calc(100% - 30%);
+        background-color: #000;
+        transform: translateX(-100%);
+        transition: transform 0.3s linear;
+
+        .nav-item {
+            margin-bottom: 10px;
+        }
+
+        .nav-link {
+            position: relative;
+            font-size: 20px;
+            color: #fff;
+            text-align: center;
+
+            &::after {
+                position: absolute;
+                right: 0;
+                bottom: -10px;
+                left: 0;
+                margin: auto;
+                content: "";
+                width: 0;
+                height: 3px;
+                background-color: #080;
+                transition: width 0.5s ease;
+            }
+
+            &.active::after {
+                width: 30%;
+            }
+        }
+    }
+
+    &__hidden.show {
+        transform: translateX(0);
+    }
+
+    &__overlay {
+        position: fixed;
+        top: 120px;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        z-index: 50;
+        background-color: rgba(0, 0, 0, 0.7);
+        transform: translateX(-100%);
+        transition: transform 0.3s linear;
+    }
+
+    &__overlay.show {
+        transform: translateX(0);
+    }
+
+    @media only screen and (max-width: 768px) {
+        &__nav {
+            display: none;
+        }
+
+        &__toggle-btn {
+            display: block;
+        }
+    }
 }
