--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,6 @@ body {
 
 main {
     flex-grow: 1;
-    height: 100%;
 }
 
 img {
@@ -83,8 +82,6 @@ a {
 }
 
 .loader {
-    width: 100%;
-    height: 100%;
     position: fixed;
     top: 0;
     right: 0;
@@ -94,5 +91,6 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.5);
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
 }
